# qr-term

./: README.md  pyproject.toml
src/qr_term/: __init__.py  cli.py  generator.py  wifi.py
tests/: test_cli.py  test_generator.py  test_wifi.py
